@startuml UnbeleafableObjects

enum Role{
    CUSTOMER
    HORTICULTURIST
}

class User {
    - *id: integer
    - name: String
    - email: String
    - password: LargeBinary
    - role: Role
}

class Plant {
    - *id: integer
    - name: String
    - color: String
    - variety: String
    - climate: String
    - quantity: integer
    - price: numeric
    - sellerId: integer
}

enum CartStatus {
    ACTIVE
    INACTIVE
}

class Cart {
    - *id: integer
    - cartStatus: CartStatus 
    - customerId: integer
}

class CartItem {
    - *id: integer
    - quantity: integer
    - plantId: integer
    - cartId: integer
}

class Order {
    - *id: integer
    - orderDate: DateTime
    - orderTotalItemAmount: integer
    - orderCost: numeric
    - customerId: integer
}

class OrderItem {
    - *id: integer
    - quantity: integer
    - orderId: integer
    - plantId: integer
}

User "1" *-- "0..*" Plant: sells
User "1" o-- "0..1" Cart : has
User "1" o-- "0..*" Order: orders

Cart "1" *-- "0..*" CartItem : holds
CartItem "1" --> "1" Plant : references

Cart "1" --> "1" Order: can become

Order "1" *-- "1..*" OrderItem: contains
OrderItem "1" --> "1" Plant: references

@enduml